--- a/styles/style.css
+++ b/styles/style.css
@@ -479,12 +479,12 @@ main {
     padding-bottom: var(--segment);
     display: grid;
     grid-template-columns: auto;
-    row-gap: var(--segment);
+    row-gap: calc(4.75rem + 0.1875rem);
     max-width: var(--breakpoint-xl);
     margin: auto;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #intro {
         padding-top: calc((var(--segment) * 1.5) - var(--segment-quarter));
         padding-bottom: var(--segment-half);
@@ -538,7 +538,7 @@ main {
     justify-content: space-between;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #intro_left-column {
         row-gap: 0;
         flex-direction: column;
@@ -572,10 +572,9 @@ main {
     display: table;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #intro_left-column h2>div>span[style*="--i:7"] {
-        display: block;
-        width: 0;
+        flex-basis: 100%;
         height: 0;
     }
 
@@ -584,22 +583,24 @@ main {
     }
 
     #intro_left-column h2>div>span[style*="--i:9"] {
+        padding-top: var(--segment-third);
         transform: translateX(-0.15rem);
     }
 
     #intro_left-column h2>div>span[style*="--i:10"] {
+        padding-top: var(--segment-third);
         transform: translateX(-0.225rem);
     }
 
     #intro_left-column h2>div>span[style*="--i:11"] {
+        padding-top: var(--segment-third);
         transform: translateX(-0.3rem);
     }
 }
 
 @media (min-width: 67.5rem) {
     #intro_left-column h2>div>span[style*="--i:7"] {
-        display: inline-block;
-        width: unset;
+        flex-basis: unset;
         height: unset;
     }
 
@@ -608,14 +609,17 @@ main {
     }
 
     #intro_left-column h2>div>span[style*="--i:9"] {
+        padding-top: unset;
         transform: unset;
     }
 
     #intro_left-column h2>div>span[style*="--i:10"] {
+        padding-top: unset;
         transform: unset;
     }
 
     #intro_left-column h2>div>span[style*="--i:11"] {
+        padding-top: unset;
         transform: unset;
     }
 }
@@ -672,7 +676,13 @@ main {
 /* Intro - Right Column - Availability */
 
 #availability_button {
-    padding-top: 4rem;
+    padding-top: calc(var(--segment) + 0.0625rem);
+}
+
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+    #availability_button {
+        padding-top: var(--segment);
+    }
 }
 
 #availability_button_dot {
@@ -729,7 +739,7 @@ main {
     grid-template-rows: auto;
     row-gap: 0.375rem;
     column-gap: 1rem;
-    margin-top: calc((1.5 * var(--segment)) + 0.5rem);
+    margin-top: calc(5.5rem - 0.03125rem);
     padding: 0.375rem;
 }
 
@@ -763,10 +773,11 @@ main {
     letter-spacing: 0.125rem;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #menu {
         grid-auto-flow: column;
         row-gap: 0.75rem;
+        margin-top: calc((1.5 * var(--segment)) + 0.5rem);
     }
 
     #menu::before {
@@ -821,7 +832,7 @@ body {
     border-radius: 0.375rem 0.375rem 0.625rem 0.625rem;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #menu_button {
         padding: 0.375rem 0.625rem;
         border-radius: 0.375rem 0.625rem 0.625rem 0.375rem;
@@ -838,7 +849,7 @@ body {
     transform: rotate(90deg);
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #menu_button>div {
         transform: rotate(0deg);
     }
@@ -860,7 +871,7 @@ body {
     pointer-events: none;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #menu_dropdown {
         right: 100%;
         bottom: 0;
@@ -922,7 +933,7 @@ body {
     overscroll-behavior: none;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     .modal {
         padding: var(--segment-quarter);
     }
@@ -968,7 +979,7 @@ body {
     border-radius: calc(var(--segment-eighth) - 0.125rem) calc((var(--modal-button-close-border-radius) + var(--modal-button-close-inset)) - 0.0625rem) calc(var(--segment-eighth) - 0.125rem) calc(var(--segment-eighth) - 0.125rem);
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     .modal .modal_content {
         padding-top: var(--segment-quarter);
     }
@@ -1220,7 +1231,7 @@ body {
     align-self: flex-start;
 }
 
-@media (min-width: 45rem) {
+@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
     #logo {
         margin-top: 0;
     }
