add blur animation

--- a/styles/animation.css
+++ b/styles/animation.css
@@ -38,10 +38,11 @@ body {
 .animate-fade-in-cta-2,
 .animate-fade-in-logo,
 .animate-fade-in-triangle::after {
-    animation-name: fade-in;
+    animation-name: fade-in-opacity, fade-in-blur;
     animation-fill-mode: backwards;
-    animation-duration: 2.5s;
+    animation-duration: 2.5s, 0.75s;
     animation-timing-function: var(--ease-out-quad);
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .animate-fade-in-name>div>span {
@@ -53,21 +54,21 @@ body {
 }
 
 .animate-fade-in-cta-1 {
-    animation-duration: 1.5s;
-    animation-delay: calc((var(--delay-segment) * 5) + 0.1s);
+    animation-duration: 1s;
+    animation-delay: calc((var(--delay-segment) * 6) + 0.1s);
 }
 
 .animate-fade-in-cta-2 {
     animation-duration: 1s;
-    animation-delay: calc((var(--delay-segment) * 7) + 0.1s);
+    animation-delay: calc((var(--delay-segment) * 8) + 0.1s);
 }
 
 .animate-fade-in-logo {
-    animation-duration: 1.5s;
-    animation-delay: calc((var(--delay-segment) * 9) + 0.1s);
+    animation-duration: 1s;
+    animation-delay: calc((var(--delay-segment) * 10) + 0.1s);
 }
 
-@keyframes fade-in {
+@keyframes fade-in-opacity {
     0% {
         opacity: 0;
         pointer-events: none;
@@ -80,6 +81,18 @@ body {
     100% {
         opacity: 1;
         pointer-events: auto;
+    }
+}
+
+@keyframes fade-in-blur {
+    0% {
+        transform: scale(0.95);
+        filter: blur(0.5rem);
+    }
+
+    100% {
+        transform: scale(1);
+        filter: blur(0);
     }
 }
 
@@ -158,13 +171,14 @@ body {
 .animate-fade-in-title span.highlight,
 .animate-fade-in-title span.highlight-alt {
     animation-fill-mode: both;
-    animation-duration: 2.25s, 1s;
+    animation-duration: 2.25s, 0.75s, 1s;
     animation-timing-function: var(--ease-out-quad);
-    animation-delay: calc(0.3s + var(--delay-segment) + var(--i) * 15ms), calc(0.3s + (var(--delay-segment) * 2) + var(--i) * 10ms);
+    animation-delay: calc(0.3s + var(--delay-segment) + var(--i) * 15ms), calc(0.3s + var(--delay-segment) + var(--i) * 15ms), calc(0.3s + (var(--delay-segment) * 2) + var(--i) * 20ms);
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .animate-fade-in-title span.highlight {
-    animation-name: fade-in, de-highlight;
+    animation-name: fade-in-opacity, fade-in-blur, de-highlight;
 }
 
 @keyframes de-highlight {
@@ -178,7 +192,7 @@ body {
 }
 
 .animate-fade-in-title span.highlight-alt {
-    animation-name: fade-in, de-highlight-alt;
+    animation-name: fade-in-opacity, fade-in-blur, de-highlight-alt;
 }
 
 @keyframes de-highlight-alt {
