--- a/styles/style.css
+++ b/styles/style.css
@@ -380,6 +380,8 @@ button,
         animation: none !important;
         transition: none !important;
         backdrop-filter: none !important;
+        -webkit-backdrop-filter: none !important;
+        filter: none !important;
     }
 
     a:active,
@@ -664,9 +666,8 @@ main {
     font-style: italic;
     font-size: 2.985075rem;
     line-height: 4rem;
-    padding-top: 0.0624375rem;
-    /* padding: 0 0.625rem;
-    margin: 0 -0.625rem; */
+    padding: 0.0624375rem 0.625rem 0 0.625rem;
+    margin: 0 -0.625rem;
     /* font-variation-settings: "opsz" 24; */
 }
 
@@ -761,6 +762,7 @@ main {
     background-color: var(--context-bg);
     border-radius: 1.75rem 1.75rem 1rem 1rem;
     backdrop-filter: blur(0.09375rem);
+    -webkit-backdrop-filter: blur(0.09375rem);
 }
 
 #menu_email_button, #menu_links>a {
