--- a/styles/reset.css
+++ b/styles/reset.css
@@ -104,6 +104,7 @@ button {
     line-height: normal;
     -webkit-font-smoothing: inherit;
     -moz-osx-font-smoothing: inherit;
+    appearance: none;
     -webkit-appearance: none;
 }
 
