--- a/styles/style.css
+++ b/styles/style.css
@@ -486,7 +486,7 @@ main {
     margin: auto;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #intro {
         padding-top: calc((var(--segment) * 1.5) - var(--segment-quarter) - 0.0625rem);
         padding-bottom: var(--segment-half);
@@ -541,7 +541,7 @@ main {
     justify-content: space-between;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #intro_left-column {
         row-gap: 0;
         flex-direction: column;
@@ -579,7 +579,7 @@ main {
     display: table;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #intro_left-column h2>div>span[style*="--i:7"] {
         flex-basis: 100%;
         height: 0;
@@ -690,7 +690,7 @@ main {
     padding-top: calc(var(--segment) + 0.0625rem);
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #availability_button {
         padding-top: var(--segment);
     }
@@ -785,7 +785,7 @@ main {
     letter-spacing: 0.125rem;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #menu {
         grid-auto-flow: column;
         row-gap: 0.75rem;
@@ -844,7 +844,7 @@ body {
     border-radius: 0.375rem 0.375rem 0.625rem 0.625rem;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #menu_button {
         padding: 0.375rem 0.625rem;
         border-radius: 0.375rem 0.625rem 0.625rem 0.375rem;
@@ -861,7 +861,7 @@ body {
     transform: rotate(90deg);
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #menu_button>div {
         transform: rotate(0deg);
     }
@@ -883,7 +883,7 @@ body {
     pointer-events: none;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #menu_dropdown {
         right: 100%;
         bottom: 0;
@@ -945,7 +945,7 @@ body {
     overscroll-behavior: none;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     .modal {
         padding: var(--segment-quarter);
     }
@@ -991,7 +991,7 @@ body {
     border-radius: calc(var(--segment-eighth) - 0.125rem) calc((var(--modal-button-close-border-radius) + var(--modal-button-close-inset)) - 0.0625rem) calc(var(--segment-eighth) - 0.125rem) calc(var(--segment-eighth) - 0.125rem);
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     .modal .modal_content {
         padding-top: var(--segment-quarter);
     }
@@ -1243,7 +1243,7 @@ body {
     align-self: flex-start;
 }
 
-@media ((min-width: 45rem) and (min-aspect-ratio: 3/4)) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #logo {
         margin-top: 0;
     }
