--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,6 @@
     --cyan-quarter-5: #0e1213;
     /* 210, 25, 10 */
     --cyan-quarter-10: #171c1e;
-    /* rgba(23, 28, 30, 1) */
     /* 210, 25, 15 */
     --cyan-quarter-15: #202729;
     /* 210, 25, 20 */
@@ -242,11 +241,9 @@ html {
 body {
     --background: var(--cyan-full-5);
     --background-pattern: url("data:image/svg+xml,%3Csvg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='23' y='23' width='2' height='2' fill='%232A3F43'/%3E%3C/svg%3E%0A");
-    /* 260, 100, 25 */
-    --triangle: rgba(0, 52, 141, 0), rgba(0, 52, 141, 1);
+    --triangle: rgba(0, 52, 141, 0), rgba(0, 52, 141, 1); /* 260, 100, 25 */
     --triangle-stripe: rgba(0, 31, 36, 0), rgba(0, 31, 36, 1);
-    /* 75, 100, 25  */
-    --triangle-alt: rgba(238, 213, 0, 0), rgba(68, 60, 0, 1);
+    --triangle-alt: rgba(238, 213, 0, 0), rgba(134, 120, 0, 1); /* 75, 100, 50  */
     --text-1: var(--cyan-full-95);
     --text-2: var(--cyan-quarter-85);
     --text-3: var(--cyan-quarter-65);
