--- a/styles/animation.css
+++ b/styles/animation.css
@@ -90,7 +90,7 @@ body {
 @keyframes fade-in-blur {
     0% {
         transform: scale(0.95);
-        filter: blur(0.5rem);
+        filter: blur(8px);
     }
 
     100% {
@@ -102,7 +102,7 @@ body {
 @keyframes fade-in-blur-2 {
     0% {
         transform: scale(0.9875);
-        filter: blur(0.25rem);
+        filter: blur(4px);
     }
 
     100% {
@@ -453,7 +453,7 @@ svg.animate-face-icon path {
 
 @keyframes menu-top-left {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -474,17 +474,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size)))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-top-right {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -505,17 +505,17 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap)))))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-left {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -536,17 +536,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap))))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-right {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -567,10 +567,10 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
 }
@@ -580,13 +580,13 @@ svg.animate-face-icon path {
 #menu_dropdown {
     visibility: hidden;
     opacity: 0;
-    transform: translateY(-0.25rem);
+    transform: translateY(-4px);
     transition: opacity calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), transform calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), visibility 0s calc(1.25 * var(--animate-out-segment));
 }
 
-@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
+@media (min-width: 720px) and (min-aspect-ratio: 3/4) {
     #menu_dropdown {
-        transform: translateX(-0.25rem);
+        transform: translateX(-4px);
     }
 }
 
@@ -600,15 +600,15 @@ svg.animate-face-icon path {
 
 #menu_dropdown a:first-child:before,
 #menu_dropdown a:first-child:after {
-    inset: -0.0625rem 0 0 0;
-    border-radius: 0.3125rem 0.3125rem 0 0;
-    /* border-radius: 0.1875rem 0.1875rem 0.09375rem 0.09375rem; */
+    inset: -1px 0 0 0;
+    border-radius: 5px 5px 0 0;
+    /* border-radius: 3px 3px 1.5px 1.5px; */
 }
 
 #menu_dropdown label:last-child:before,
 #menu_dropdown label:last-child:after {
-    border-radius: 0 0 0.3125rem 0.3125rem;
-    /* border-radius: 0.09375rem 0.09375rem 0.1875rem 0.1875rem; */
+    border-radius: 0 0 5px 5px;
+    /* border-radius: 1.5px 1.5px 3px 3px; */
 }
 
 #menu_dropdown a::before,
@@ -617,7 +617,7 @@ svg.animate-face-icon path {
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /* 0 0 -0.0625rem 0; */
+    inset: 0; /* 0 0 -1px 0; */
     z-index: 1;
     background-image: linear-gradient(to right, rgba(0, 118, 132, 0.75), rgba(0, 118, 132, 0.15)); /* 210, 100, 45 */
 
@@ -625,10 +625,10 @@ svg.animate-face-icon path {
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0.5625rem 0.625rem 0.625rem 0.625rem;
+    inset: 9px 10px 10px 10px;
     z-index: 0;
     background-color: var(--highlight-secondary);
-    border-radius: 0.09375rem; */
+    border-radius: 1.5px; */
 }
 
 #menu_dropdown a::after,
@@ -637,10 +637,10 @@ svg.animate-face-icon path {
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /*  -0.0625rem; */
+    inset: 0; /*  -1px; */
     z-index: 1;
 
-    border: 0.0625rem solid transparent;
+    border: 1px solid transparent;
     background-image: linear-gradient(to right, rgba(0, 118, 132, 1), rgba(0, 118, 132, 0)); /* 210, 100, 45 */
     background-origin: border-box;
     background-clip: border-box;
@@ -666,7 +666,7 @@ svg.animate-face-icon path {
     opacity: 1;
     /* transition: opacity var(--animate-in-segment-2\/3) linear, inset var(--animate-in-segment-2\/3) var(--ease-out-quad);
     opacity: 1;
-    inset: 0.1875rem 0.25rem 0.25rem 0.25rem; */
+    inset: 3px 4px 4px 4px; */
 }
 
 #menu_dropdown a span,
@@ -748,7 +748,7 @@ svg.animate-face-icon path {
     transform-origin: center;
 }
 
-@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
+@media (min-width: 720px) and (min-aspect-ratio: 3/4) {
     #intro_left-column, #intro_right-column {
         transform-origin: top;
     }
@@ -791,13 +791,13 @@ svg.animate-face-icon path {
 }
 
 #underlay_menu {
-    backdrop-filter: blur(0.125rem);
-    -webkit-backdrop-filter: blur(0.125rem);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
 }
 
 #underlay_modal {
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
 }
 
 #debug:not(:checked)~main #menu:target #underlay_menu {
