--- a/styles/animation.css
+++ b/styles/animation.css
@@ -46,8 +46,16 @@ body {
 }
 
 .animate-fade-in-name>div>span,
+.animate-fade-in-title>span,
+.animate-fade-in-cta-1,
+.animate-fade-in-logo {
+    transform: translate3d(0,0,0);
+}
+
+.animate-fade-in-name>div>span,
 .animate-fade-in-title>span {
     animation-name: fade-in-opacity, fade-in-blur;
+    transform: translate3d(0,0,0);
     animation-duration: 2.5s, 0.75s;
 }
 
@@ -90,7 +98,7 @@ body {
 @keyframes fade-in-blur {
     0% {
         transform: scale(0.95);
-        filter: blur(8px);
+        filter: blur(0.5rem);
     }
 
     100% {
@@ -102,7 +110,7 @@ body {
 @keyframes fade-in-blur-2 {
     0% {
         transform: scale(0.9875);
-        filter: blur(4px);
+        filter: blur(0.25rem);
     }
 
     100% {
@@ -124,10 +132,12 @@ body {
 
 .animate-flicker-triangle-light::after {
     animation-name: flicker-light;
+    transform: translate3d(0,0,0);
 }
 
 .animate-flicker-triangle-shadow::after {
     animation-name: flicker-shadow;
+    transform: translate3d(0,0,0);
 }
 
 #profile:target~main .animate-flicker-triangle-light::after,
@@ -165,19 +175,23 @@ body {
 
 .highlight:focus {
     transition: color calc(2 * var(--animate-out-segment)) var(--ease-in-quad) var(--delay-segment);
+    transform: translate3d(0,0,0);
 }
 
 .highlight:focus.active, .highlight-hover.active {
     color: var(--highlight-primary) !important;
     transition: color calc(2 * var(--animate-in-segment)) var(--ease-out-quad) !important;
+    transform: translate3d(0,0,0);
 }
 
 .highlight-hover:hover {
     transition: color calc(2 * var(--animate-in-segment)) var(--ease-in-quad) var(--delay-segment) !important;
+    transform: translate3d(0,0,0);
 }
 
 .highlight-hover.active:hover {
     transition: color calc(2 * var(--animate-in-segment)) var(--ease-out-quad) !important;
+    transform: translate3d(0,0,0);
 }
 
 
@@ -194,6 +208,7 @@ body {
 
 .animate-fade-in-title span.highlight {
     animation-name: fade-in-opacity, fade-in-blur, de-highlight;
+    transform: translate3d(0,0,0);
 }
 
 @keyframes de-highlight {
@@ -208,6 +223,7 @@ body {
 
 .animate-fade-in-title span.highlight-alt {
     animation-name: fade-in-opacity, fade-in-blur, de-highlight-alt;
+    transform: translate3d(0,0,0);
 }
 
 @keyframes de-highlight-alt {
@@ -232,6 +248,7 @@ body {
 svg.animate-face-icon path {
     will-change: d;
     animation-name: face-icon-animation;
+    transform: translate3d(0,0,0);
     animation-fill-mode: both;
     animation-duration: calc(var(--delay-segment) * 24);
     animation-timing-function: linear;
@@ -303,6 +320,7 @@ svg.animate-face-icon path {
 #availability_button_dot {
     will-change: opacity;
     animation-name: availability-dot-fade-animation;
+    transform: translate3d(0,0,0);
     animation-fill-mode: both;
     animation-timing-function: linear;
     animation-duration: calc(var(--animate-in-segment) * 32);
@@ -316,30 +334,36 @@ svg.animate-face-icon path {
 
 #availability_button_dot::before {
     transition: opacity calc(2 * var(--animate-out-segment)) var(--ease-out-quad), transform calc(2 * var(--animate-out-segment)) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
     transform-origin: center;
     z-index: -1;
 }
 
 #availability_button a:hover #availability_button_dot::before {
     transition: opacity calc(2 * var(--animate-in-segment)) var(--ease-in-quad), transform calc(2 * var(--animate-in-segment)) var(--ease-in-quad);
+    transform: translate3d(0,0,0);
     transform: scale(135);
 }
 
 #availability_button_dot {
     transition: color var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
 }
 
 #availability_button a:hover #availability_button_dot::after {
     transition: background-color var(--animate-in-segment) linear var(--animate-in-segment);
+    transform: translate3d(0,0,0);
     background-color: var(--cyan-full-5);
 }
 
 #availability_button_text {
     transition: color var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
 }
 
 #availability_button a:hover #availability_button_text {
     transition: color var(--animate-in-segment) linear var(--animate-in-segment);
+    transform: translate3d(0,0,0);
     color: var(--cyan-full-5);
 }
 
@@ -348,10 +372,12 @@ svg.animate-face-icon path {
 
 #menu_links>a {
     transition: background-color var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
 }
 
 #menu_links>a:hover {
     transition: background-color var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     background-color: var(--highlight-secondary);
 }
 
@@ -361,30 +387,36 @@ svg.animate-face-icon path {
 
 #menu_links>a svg, #menu_email_button svg {
     transition: color var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon);
 }
 
 #menu_links>a:hover svg, #menu_email_button:hover svg {
     transition: color var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon-hover);
 }
 
 #menu_links>a span.button-label, #menu_email_button span.button-label {
     transition: color var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--text-2);
 }
 
 #menu_links>a:hover span.button-label, #menu_email_button:hover span.button-label {
     transition: color var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--text-1);
 }
 
 #menu_links>a span.button-label u {
     transition: text-decoration var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
 }
 
 #menu_links>a:hover span.button-label u {
     transition: text-decoration var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     text-decoration-color: var(--text-2) !important;
 }
 
@@ -393,11 +425,13 @@ svg.animate-face-icon path {
 
 #menu_button {
     transition: color var(--animate-out-segment-2\/3) linear, background-color var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon);
 }
 
 #menu_button_wrapper:hover #menu_button, #menu:target #menu_button {
     transition: color var(--animate-in-segment-2\/3) linear,  background-color var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon-hover);
     background-color: var(--highlight-secondary);
 }
@@ -407,53 +441,62 @@ svg.animate-face-icon path {
     will-change: transform;
     animation-fill-mode: both;
     animation-name: initial;
+    transform: translate3d(0,0,0);
 }
 
 #menu_button span:nth-child(1) {
     animation-duration: calc((var(--animate-in-segment) * 3));
-    animation-name: menu-top-left-reverse
+    animation-name: menu-top-left-reverse;
+    transform: translate3d(0,0,0);
 }
 
 #menu:target #menu_button span:nth-child(1) {
     animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-top-left;
+    transform: translate3d(0,0,0);
 }
 
 #menu_button span:nth-child(2) {
     animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-top-right-reverse;
+    transform: translate3d(0,0,0);
 }
 
 #menu:target #menu_button span:nth-child(2) {
     animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-top-right;
+    transform: translate3d(0,0,0);
 }
 
 #menu_button span:nth-child(3) {
     animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-bottom-left-reverse;
+    transform: translate3d(0,0,0);
 }
 
 #menu:target #menu_button span:nth-child(3) {
     animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-bottom-left;
+    transform: translate3d(0,0,0);
 }
 
 #menu_button span:nth-child(4) {
     animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-bottom-right-reverse;
+    transform: translate3d(0,0,0);
 }
 
 #menu:target #menu_button span:nth-child(4) {
     animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-bottom-right;
+    transform: translate3d(0,0,0);
 }
 
 @keyframes initial {}
 
 @keyframes menu-top-left {
     0% {
-        transform: translate(0px, 0px);
+        transform: translate(0rem, 0rem);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -474,17 +517,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size)))) scale(0);
     }
     55% {
-        transform: translate(0px, 0px) scale(0);
+        transform: translate(0rem, 0rem) scale(0);
     }
     100% {
-        transform: translate(0px, 0px) scale(1);
+        transform: translate(0rem, 0rem) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-top-right {
     0% {
-        transform: translate(0px, 0px);
+        transform: translate(0rem, 0rem);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -505,17 +548,17 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap)))))) scale(0);
     }
     55% {
-        transform: translate(0px, 0px) scale(0);
+        transform: translate(0rem, 0rem) scale(0);
     }
     100% {
-        transform: translate(0px, 0px) scale(1);
+        transform: translate(0rem, 0rem) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-left {
     0% {
-        transform: translate(0px, 0px);
+        transform: translate(0rem, 0rem);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -536,17 +579,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap))))) scale(0);
     }
     55% {
-        transform: translate(0px, 0px) scale(0);
+        transform: translate(0rem, 0rem) scale(0);
     }
     100% {
-        transform: translate(0px, 0px) scale(1);
+        transform: translate(0rem, 0rem) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-right {
     0% {
-        transform: translate(0px, 0px);
+        transform: translate(0rem, 0rem);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -567,10 +610,10 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size))) scale(0);
     }
     55% {
-        transform: translate(0px, 0px) scale(0);
+        transform: translate(0rem, 0rem) scale(0);
     }
     100% {
-        transform: translate(0px, 0px) scale(1);
+        transform: translate(0rem, 0rem) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
 }
@@ -580,13 +623,14 @@ svg.animate-face-icon path {
 #menu_dropdown {
     visibility: hidden;
     opacity: 0;
-    transform: translateY(-4px);
+    transform: translateY(-0.25rem);
     transition: opacity calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), transform calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), visibility 0s calc(1.25 * var(--animate-out-segment));
+    transform: translate3d(0,0,0);
 }
 
-@media (min-width: 720px) and (min-aspect-ratio: 3/4) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #menu_dropdown {
-        transform: translateX(-4px);
+        transform: translateX(-0.25rem);
     }
 }
 
@@ -596,51 +640,55 @@ svg.animate-face-icon path {
     opacity: 1;
     transform: translate(0);
     transition: opacity calc(1.25 * var(--animate-in-segment)) var(--ease-out-quad), transform calc(1.25 * var(--animate-in-segment)) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
 }
 
 #menu_dropdown a:first-child:before,
 #menu_dropdown a:first-child:after {
-    inset: -1px 0 0 0;
-    border-radius: 5px 5px 0 0;
-    /* border-radius: 3px 3px 1.5px 1.5px; */
+    inset: min(-1px, -0.0625rem) 0 0 0;
+    border-radius: 0.3125rem 0.3125rem 0 0;
+    /* border-radius: 0.1875rem 0.1875rem 0.09375rem 0.09375rem; */
 }
 
 #menu_dropdown label:last-child:before,
 #menu_dropdown label:last-child:after {
-    border-radius: 0 0 5px 5px;
-    /* border-radius: 1.5px 1.5px 3px 3px; */
+    border-radius: 0 0 0.3125rem 0.3125rem;
+    /* border-radius: 0.09375rem 0.09375rem 0.1875rem 0.1875rem; */
 }
 
 #menu_dropdown a::before,
 #menu_dropdown label::before {
     transition: opacity var(--animate-out-segment) linear, inset var(--animate-out-segment) var(--ease-in-quad);
+    transform: translate3d(0,0,0);
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /* 0 0 -1px 0; */
+    inset: 0; /* 0 0 -0.0625rem 0; */
     z-index: 1;
     background-image: linear-gradient(to right, rgba(0, 118, 132, 0.75), rgba(0, 118, 132, 0.15)); /* 210, 100, 45 */
 
     /* transition: opacity var(--animate-out-segment-2\/3) linear, inset var(--animate-out-segment-2\/3) var(--ease-in-quad);
+    transform: translate3d(0,0,0);
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 9px 10px 10px 10px;
+    inset: 0.5625rem 0.625rem 0.625rem 0.625rem;
     z-index: 0;
     background-color: var(--highlight-secondary);
-    border-radius: 1.5px; */
+    border-radius: 0.09375rem; */
 }
 
 #menu_dropdown a::after,
 #menu_dropdown label::after {
     transition: opacity var(--animate-out-segment) linear, inset var(--animate-out-segment) var(--ease-in-quad);
+    transform: translate3d(0,0,0);
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /*  -1px; */
+    inset: 0; /*  -0.0625rem; */
     z-index: 1;
 
-    border: 1px solid transparent;
+    border: max(1px, 0.0625rem) solid transparent;
     background-image: linear-gradient(to right, rgba(0, 118, 132, 1), rgba(0, 118, 132, 0)); /* 210, 100, 45 */
     background-origin: border-box;
     background-clip: border-box;
@@ -663,26 +711,31 @@ svg.animate-face-icon path {
 #menu_dropdown a:focus-within::after,
 #menu_dropdown label:focus-within::after  {
     transition: opacity var(--animate-in-segment) linear, inset var(--animate-in-segment) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
     opacity: 1;
     /* transition: opacity var(--animate-in-segment-2\/3) linear, inset var(--animate-in-segment-2\/3) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
     opacity: 1;
-    inset: 3px 4px 4px 4px; */
+    inset: 0.1875rem 0.25rem 0.25rem 0.25rem; */
 }
 
 #menu_dropdown a span,
 #menu_dropdown label span {
     transition: color var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
     z-index: 1;
 }
 
 #menu_dropdown a:hover span,
 #menu_dropdown label:hover span {
     transition: color var(--animate-in-segment) linear;
+    transform: translate3d(0,0,0);
 }
 
 #menu_dropdown a svg,
 #menu_dropdown label svg {
     transition: color var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon);
     z-index: 1;
 }
@@ -690,6 +743,7 @@ svg.animate-face-icon path {
 #menu_dropdown a:hover svg,
 #menu_dropdown label:hover svg {
     transition: color var(--animate-out-segment) linear, background-color var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
     color: var(--icon-hover);
 }
 
@@ -731,6 +785,7 @@ svg.animate-face-icon path {
 #modal_profile .modal_content,
 #modal_archive .modal_content {
     transition: opacity var(--animate-out-segment) linear, transform var(--animate-out-segment) var(--ease-in-quad), visibility 0s var(--animate-out-segment);
+    transform: translate3d(0,0,0);
     transform: scale(1.05);
     transform-origin: top;
 }
@@ -739,6 +794,7 @@ svg.animate-face-icon path {
 #archive:target~main #modal_archive .modal_content {
     visibility: visible;
     transition: opacity var(--animate-in-segment) linear, transform var(--animate-in-segment) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
     opacity: 1;
     transform: scale(1);
 }
@@ -748,7 +804,7 @@ svg.animate-face-icon path {
     transform-origin: center;
 }
 
-@media (min-width: 720px) and (min-aspect-ratio: 3/4) {
+@media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
     #intro_left-column, #intro_right-column {
         transform-origin: top;
     }
@@ -759,6 +815,7 @@ svg.animate-face-icon path {
 #archive:target~main #intro_left-column,
 #archive:target~main #intro_right-column {
     transition: transform var(--animate-in-segment) var(--ease-out-quad);
+    transform: translate3d(0,0,0);
     transform: scale(0.95);
 }
 
@@ -767,10 +824,12 @@ svg.animate-face-icon path {
 
 #modal_button-close, #modal_button-close svg {
     transition: color var(--animate-out-segment-2\/3) linear, background-color var(--animate-out-segment-2\/3) linear, border var(--animate-out-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
 }
 
 #modal_button-close:hover {
     transition: color var(--animate-in-segment-2\/3) linear, background-color var(--animate-in-segment-2\/3) linear, border var(--animate-in-segment-2\/3) linear;
+    transform: translate3d(0,0,0);
     color: var(--modal-icon-hover);
     background-color: var(--highlight-secondary);
 }
@@ -788,16 +847,17 @@ svg.animate-face-icon path {
     pointer-events: none;
     opacity: 0;
     transition: opacity var(--animate-out-segment) linear;
+    transform: translate3d(0,0,0);
 }
 
 #underlay_menu {
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(0.125rem);
+    -webkit-backdrop-filter: blur(0.125rem);
 }
 
 #underlay_modal {
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(0.5rem);
+    -webkit-backdrop-filter: blur(0.5rem);
 }
 
 #debug:not(:checked)~main #menu:target #underlay_menu {
@@ -805,6 +865,7 @@ svg.animate-face-icon path {
     pointer-events: auto;
     opacity: 1;
     transition: opacity var(--animate-in-segment) linear;
+    transform: translate3d(0,0,0);
 }
 
 #debug:not(:checked)~#profile:target~main #underlay_modal,
@@ -813,4 +874,5 @@ svg.animate-face-icon path {
     pointer-events: auto;
     opacity: 1;
     transition: opacity var(--animate-in-segment) linear;
+    transform: translate3d(0,0,0);
 }
