--- a/styles/animation.css
+++ b/styles/animation.css
@@ -504,7 +504,7 @@ svg.animate-face-icon path {
 
 @keyframes menu-top-left {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0, 0);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -525,17 +525,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size)))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0, 0) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0, 0) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-top-right {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0, 0);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -556,17 +556,17 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap)))))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0, 0) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0, 0) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-left {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0, 0);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -587,17 +587,17 @@ svg.animate-face-icon path {
         transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap))))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0, 0) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0, 0) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-right {
     0% {
-        transform: translate(0rem, 0rem);
+        transform: translate(0, 0);
         animation-timing-function: var(--ease-in-quad);
     }
     45%, 55% {
@@ -618,10 +618,10 @@ svg.animate-face-icon path {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size))) scale(0);
     }
     55% {
-        transform: translate(0rem, 0rem) scale(0);
+        transform: translate(0, 0) scale(0);
     }
     100% {
-        transform: translate(0rem, 0rem) scale(1);
+        transform: translate(0, 0) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
 }
@@ -651,7 +651,7 @@ svg.animate-face-icon path {
 
 #menu_dropdown a:first-child:before,
 #menu_dropdown a:first-child:after {
-    inset: min(-1px, -0.0625rem) 0 0 0;
+    /* inset: min(-1px, -0.0625rem) 0 0 0; */
     border-radius: 0.3125rem 0.3125rem 0 0;
     /* border-radius: 0.1875rem 0.1875rem 0.09375rem 0.09375rem; */
 }
@@ -669,7 +669,7 @@ svg.animate-face-icon path {
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /* 0 0 -0.0625rem 0; */
+    inset: min(-1px, -0.0625rem) min(-1px, -0.0625rem) 0 min(-1px, -0.0625rem);
     z-index: 1;
     background-image: linear-gradient(to right, rgba(0, 118, 132, 0.75), rgba(0, 118, 132, 0.15)); /* 210, 100, 45 */
 
@@ -691,7 +691,7 @@ svg.animate-face-icon path {
     content: '';
     opacity: 0;
     position: absolute;
-    inset: 0; /*  -0.0625rem; */
+    inset: min(-1px, -0.0625rem) min(-1px, -0.0625rem) 0 min(-1px, -0.0625rem);
     z-index: 1;
 
     border: max(1px, 0.0625rem) solid transparent;
